k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi-app
  ports:
  - port: 80
    targetPort: 8000
    nodePort: 30080  # 30000-32767 범위 내에서 선택 (중복되지 않는 포트 선택)
  type: NodePort  # ClusterIP에서 NodePort로 변경
